--- a/style.css
+++ b/style.css
@@ -33,12 +33,7 @@ main{
     padding-top: 15px;
     display: flex;
     align-items: center;
-    
-}
-
-.title{
-    text-align: start;
-}
+    }
 
 
 .img{
@@ -54,7 +49,7 @@ main{
     display: flex;
     text-align: center;
 }
- 
+
 /*fin main*/
 
 /*Footer*/
@@ -67,14 +62,14 @@ footer{
     border-bottom: 1px solid transparent;
 }
 .description_bas>ul li:hover{
-    
-    border-bottom: 1px solid white;
+        border-bottom: 1px solid white;
 }
 .slider {
     display: flex;
     flex-wrap: wrap;
     display: flex;
     align-content: space-between;
+    justify-content: space-around;
 }
 /*fin footer*/
 
